fix intro text for manual entry

--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -92,7 +92,7 @@
       <hr class="hidden-print"/>
       <br class="hidden-print"/>
       <div class="hidden-print">
-        <p>{{_("We are inviting you to use the TrueNTH website tool because you have agreed to participate in the IRONMAN Registry study.")}}</p>
+        <p class="intro-text">{{_("We are inviting you to use the TrueNTH website tool because you have agreed to participate in the [organization] Registry study.")}}</p>
         <p>{{_("The information you provide will be used in a global study and will benefit patients in the future with better treatment and care options.  Does this sound like something you’d be willing to participate in?")}}</p>
         <ul>
             <li>{{_("If yes, continue to read below text and Consent.")}}</li>
