prevent event propagation on embedded links for terms checkbox

--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -64,6 +64,11 @@
        <script>
             $(function () {
                 tnthAjax.getTermsUrl();
+                $(".custom-tou-text .required-link").each(function() {
+                    $(this).on("click", function(e) {
+                      e.stopPropagation();
+                    });
+                });
             });
        </script>
   {%- endmacro %}
