--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -5358,14 +5358,22 @@ body.modal-open .modal.is-modal-active .modal-dialog {
     border: 2px solid #f1efec;
     min-width: 215px;
 }
-.box-modal form input.button--login {
+.box-modal form input.button--login,
+.box-modal form input.button--login--register {
     background-color: #c7c6c0;
     border: 2px solid #c7c6c0;
+    color: #FFF;
 }
 .box-modal form input:focus,
 .box-modal form input:active {
     border: 2px solid #7C959E;
     outline: none !important;
+}
+.box-modal form input.button--login:focus,
+.box-modal form input.button--login--register:focus,
+.box-modal form input.button--login:active,
+.box-modal form input.button--login--register:active {
+    border: 2px solid #c7c6c0;
 }
 .box-modal form button {
     display: inline-block;
