fix site id styling in account creation page

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -288,6 +288,10 @@ select:not([multiple]) {
     margin-bottom: 1.8em;
   }
 }
+#createProfileForm #profileSiteId {
+  width: 350px;
+  max-width: 100%;
+}
 #profileSiteId {
   width: 300px;
   max-width: 100%;
