--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -251,6 +251,10 @@ select:not([multiple]) {
 #mainDiv.profile #profileSiteIDContainer {
   margin-bottom: 1.8em;
 }
+#createProfileForm #profileSiteId {
+  width: 350px;
+  max-width: 100%;
+}
 #profileSiteId {
   width: 300px;
   max-width: 100%;
