--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -288,9 +288,14 @@ select:not([multiple]) {
     margin-bottom: 1.8em;
   }
 }
-#createProfileForm #profileSiteId {
-  width: 350px;
-  max-width: 100%;
+#createProfileForm {
+  #profileSiteId {
+    width: 350px;
+    max-width: 100%;
+  }
+  #profileSiteIDContainer {
+    margin-top: 1.3em;
+  }
 }
 #profileSiteId {
   width: 300px;
