recaptcha for contact form

--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -73,6 +73,9 @@
                 </div>
               </div>
               <div class="field-group">
+                {{ recaptcha }}
+              </div>
+              <div class="field-group">
                 <div class="button-wrap button-wrap--centered"><a id="submitButton" class="icon-box__button icon-box__button--main"><span>{{_("Submit")}}<figure></figure></span></a></div>
               </div>
             </form>
