--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -72,9 +72,11 @@
                   </select>
                 </div>
               </div>
+              {% if not user %}
               <div class="field-group">
                 {{ recaptcha }}
               </div>
+              {% endif %}
               <div class="field-group">
                 <div class="button-wrap button-wrap--centered"><a id="submitButton" class="icon-box__button icon-box__button--main"><span>{{_("Submit")}}<figure></figure></span></a></div>
               </div>
