--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -52,7 +52,7 @@
 {%- endmacro %}
 
 {% macro back_btn(url,text) -%}
-<a href="{{PORTAL}}/{{url}}" class="btn btn-xs btn-tnth-back"><small><i class="fa fa-chevron-left"></i> {{ _("Back to") }} {{text}}</small></a><br/>
+<a href="{{PORTAL}}/{{url}}" class="btn btn-xs btn-tnth-back required-link"><small><i class="fa fa-chevron-left"></i> {{ _("Back to") }} {{text}}</small></a><br/>
 {%- endmacro %}
 
 {% macro back_link(url,text) -%}
