--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -78,6 +78,9 @@
           {% if user and user.has_role(ROLE.APPLICATION_DEVELOPER) %}
               <li class="side-nav-items__item side-nav-items__item--clients"><a href="{{url_for('auth.clients_list')}}">{{_("Client Applications")}}</a></li>
           {% endif %}
+          {% if user and (user.has_role(ROLE.ADMIN) or user.has_role(ROLE.ANALYST)) %}
+              <li class="side-nav-items__item side-nav-items__item--clients"><a href="{{url_for('portal.reporting_dashboard')}}">{{_("Reporting Dashboard")}}</a></li>
+          {% endif %}
           {% if user and user.has_role(ROLE.ADMIN) %}
               <li class="side-nav-items__item side-nav-items__item--admin"><a href="{{url_for('portal.admin')}}">{{_("User Administration")}}</a></li>
               <li class="side-nav-items__item side-nav-items__item--settings"><a href="{{url_for('portal.settings')}}">{{_("Settings")}}</a></li>
