only display/check captcha if proper configs are set

--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -33,7 +33,7 @@
         <textarea class="form-control" rows="5" name="body" id="body" data-error="{{ _('Please add a message for TrueNTH') }}" placeholder="{{ _('What is on your mind?') }}" required></textarea>
         <div class="help-block with-errors"></div>
       </div>
-      {% if not user %}
+      {% if not user and config.RECAPTCHA_SITE_KEY and config.RECAPTCHA_SECRET_KEY %}
       <div class="field-group">
         {{ recaptcha }}
       </div>
