--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -81,6 +81,8 @@
           {%- endif -%}
         </select>
         <input type="hidden" id="sys_default_locale" value="{{config.get('DEFAULT_LOCALE')}}" />
+        <div class="get-demo-error get-locale-error error-message"></div>
+        <div class="put-demo-error error-message"></div>
      </div>
      <script>$(function () {
         $('#locale').on('change', function() {
@@ -548,6 +550,9 @@
            {% if consent_agreements %}{{consent(person, consent_agreements, current_user, True)}}{% endif %}
         </div>
     </div>
+    <div class="get-orgs-error error-message"></div>
+    <div class="get-demo-error error-message"></div>
+    <div class="put-demo-error error-message"></div>
     <script>
         var CONSENT_WITH_TOP_LEVEL_ORG = {% if config.CONSENT_WITH_TOP_LEVEL_ORG %}true{% else %}false{% endif %};
         function handleCheckedItem() {
@@ -690,6 +695,9 @@
             <div class="help-block with-errors"></div>
         </div>
     </div>
+    <div class="get-orgs-error error-message"></div>
+    <div class="get-demo-error error-message"></div>
+    <div class="put-demo-error error-message"></div>
     <script>
         var CONSENT_WITH_TOP_LEVEL_ORG = {% if config.CONSENT_WITH_TOP_LEVEL_ORG %}true{% else %}false{% endif %};
         var ORG_EDIT_PERMISSIBLE_ROLES = {% if config.CONSENT_EDIT_PERMISSIBLE_ROLES %}{{ config.CONSENT_EDIT_PERMISSIBLE_ROLES|safe }}{% else %}false{% endif %};
@@ -786,7 +794,7 @@
                    {%- endif -%}
                 {%- endfor -%}
             {%- endif -%}
-            <div class="error-message"></div>
+            <div class="get-consent-error error-message"></div>
         </div>
         <script>
             $(function() {
@@ -925,10 +933,13 @@
 {% macro profileConsent(person, current_user) -%}
     {% if person %}
     <div id="profileConsentList">{{_("No information available.")}}</div>
+    <div class="get-consent-error error-message"></div>
+    <div class="set-consent-error error-message"></div>
+    <div class="delete-consent-error error-message"></div>
     <script>
         var CONSENT_EDIT_PERMISSIBLE_ROLES = {% if config.CONSENT_EDIT_PERMISSIBLE_ROLES %}{{ config.CONSENT_EDIT_PERMISSIBLE_ROLES|safe }}{% else %}false{% endif %};
         var consentEditable = {% if (current_user.has_role(ROLE.STAFF) and ROLE.STAFF in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or (current_user.has_role(ROLE.PATIENT) and ROLE.PATIENT in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or current_user.has_role(ROLE.ADMIN) %}true{% else %}false{% endif %};
-        var isTestPatient = '{{config.get("SYSTEM.TYPE")}}'.toUpperCase() != "PRODUCTION";
+        var isTestPatient = {% if current_user and not current_user.has_role(ROLE.PATIENT) %}'{{config.get("SYSTEM.TYPE")}}'.toUpperCase() != "PRODUCTION"{% else %}false{% endif %};
         var _isAdmin = {%if current_user.has_role(ROLE.ADMIN) %}true{%else%}false{%endif%};
         /**** this function is used when this section becomes editable, note: this is called after the user has edited the consent list; this will refresh the list ****/
         function reloadConsentList() {
@@ -1059,6 +1070,9 @@
         <p class="small-text text-muted">{{ _("Editable by admins only.") }}</p>
         <!-- roles are populated in main.js -->
         <div class="form-group" id="rolesGroup" data-loader-container="true"></div>
+        <div class="get-roles-error error-message"></div>
+        <div class="put-roles-error error-message"></div>
+        <div class="delete-roles-error error-message"></div>
     {% endif %}
     {% if person %}
     <script>
@@ -1272,6 +1286,9 @@
                 <div id="patientQContainer" class="edit-container">
                     {{patientQGroup(current_user)}}
                 </div>
+                <div class="get-clinical-error error-message"></div>
+                <div class="put-clinical-error error-message"></div>
+                <div class="post-clinical-error error-message"></div>
             </div>
         </div>
     </div>
@@ -1502,7 +1519,8 @@
                         </div>
                     </div>
                 </div>
-                <div id="errorDeathDate" class="error-message"></div>
+                <div id="errorDeathDate" class="get-demo-error error-message"></div>
+                <div class="put-demo-error error-message"></div>
             </div>
         </div>
     </div>
@@ -1736,6 +1754,8 @@
                     {{profilePhone(person)}}
                     {{profileAltPhone(person)}}
                 </div>
+                <div class="get-demo-error error-message"></div>
+                <div class="put-demo-error error-message"></div>
             </div>
         </div>
     </div>
@@ -1759,6 +1779,8 @@
                         {{profileIndigenous(person)|show_macro('indigenous')}}
                     </div>
                     <div class="no-data-container"></div>
+                    <div class="get-demo-error error-message"></div>
+                    <div class="put-demo-error error-message"></div>
                 </div>
             </div>
         </div>
@@ -1828,6 +1850,8 @@
                         <tr class="locale-view"><td class="text-muted">{{_("Language")}}</td><td><div id="locale_view"></div></td></tr>
                         <tr class="timezone-view"><td class="text-muted">{{_("Time Zone")}}</td><td><div id="timezone_view"></div></td></tr>
                     </table>
+                    <div class="get-demo-error get-locale-error error-message"></div>
+                    <div class="put-demo-error error-message"></div>
                 </div>
                 <div class="edit-container flex">
                     {{profileLocale(person)|show_macro('language')}}
@@ -1876,6 +1900,7 @@
                         <tr><td class="text-muted">{{_("Cell")}}</td><td><div id="phone_view"></div></td></tr>
                         <tr><td class="text-muted">{{_("Phone (Other)")}}</td><td><div id="alt_phone_view"></div></td></tr>
                    </table>
+
                 </div>
                 <div class="edit-container">
                     {{profileName(person)}}
@@ -1886,6 +1911,8 @@
                     {{profilePhone(person)}}
                     {{profileAltPhone(person)}}
                 </div>
+                <div class="get-demo-error error-message"></div>
+                <div class="put-demo-error error-message"></div>
             </div>
         </div>
     </div>
@@ -1909,6 +1936,8 @@
                         {{profileIndigenous(person)|show_macro('indigenous')}}
                     </div>
                     <div class="no-data-container"></div>
+                    <div class="get-demo-error error-message"></div>
+                    <div class="put-demo-error error-message"></div>
                 </div>
             </div>
         </div>
@@ -2016,6 +2045,8 @@
                         <tr class="locale-view"><td class="text-muted">{{_("Language")}}</td><td><div id="locale_view"></div></td></tr>
                         <tr class="timezone-view"><td class="text-muted">{{_("Time Zone")}}</td><td><div id="timezone_view"></div></td></tr>
                     </table>
+                    <div class="get-demo-error get-locale-error error-message"></div>
+                    <div class="put-demo-error error-message"></div>
                 </div>
                 <div class="edit-container flex">
                     {{profileLocale(person)|show_macro('language')}}
