--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -470,6 +470,9 @@ div.right-panel {
   max-width: 991px;
   margin: auto;
 }
+#termsText.agreed {
+  display: none;
+}
 .terms-of-use-intro {
   display: none;
 }
