--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -418,6 +418,9 @@ h4.detail-title {
   margin: 2em 0;
   min-height: 20vh;
 }
+#termsText.agreed {
+  display: block;
+}
 #topTerms.hide-terms ~ #aboutForm {
   margin: 3em auto;
   min-height: 50vh;
