--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -485,7 +485,7 @@ function initIncompleteFields() {
             $("#termsReminderModal").modal("show");
           };
         };
-        disableHeaderFooterLinks();
+        setTimeout("disableHeaderFooterLinks({hideHeaderLinks: true});", 1000);
       } else {
         $("#topTerms").hide();
         fc.getNext();
