add button--teal css back to login-register button

--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -218,7 +218,7 @@
         <div class="modal-content box-modal">
           <div class="box-modal__inner"><a class="box-modal__close" data-dismiss="modal" aria-label="Close"></a>
             <h3 class="box-modal__title">{{_("Login")}}</h3>
-            <a href="#" class="button button-large button--login--register">{{_("Login")}}</a>
+            <a href="#" class="button button-large button--teal button--login--register">{{_("Login")}}</a>
             <br/><br/>
             <div class="or">{{_("or")}}</div>
             <div class="box-modal-or__divider"></div>
