add missing translation tags, minor profile page styling fixes

--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -36,7 +36,7 @@
 
                 <br/><br/><br/>
                 <div class="divider"></div>
-                <div class="or">or</div>
+                <div class="or">{{_('or')}}</div>
                 <div class="or-divider"></div>
                 <br/>
             </div>
