--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1278,7 +1278,7 @@ h4.detail-title {
 .profile-item-container {
   background-color: #EFF5F3;
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
-  padding: 2em 3em 3.5em 3em;
+  padding: 2em 3em 2.5em 3em;
   margin: 0.5em auto;
   border: 2px solid #bcc2a6;
   max-width: 100%;
@@ -1647,6 +1647,10 @@ table.profile-audit-log TH,
 #userAssessementReport table {
   word-break: break-all;
   font-size: 0.94em;
+}
+#patientReportErrorMessage {
+  margin-top: 0.2em;
+  margin-bottom: 0.5em;
 }
 .terms-container {
   border-style:ridge;
