--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1374,7 +1374,7 @@ h4.detail-title {
   /*background-color: rgba(173, 193, 197, 0.16);*/
   /*background-color: rgba(204, 206, 204, 0.25);*/
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%) ;
-  padding: 1.5em 2.5em 3.5em 2.5em;
+  padding: 2em 3em 2.5em 3em;
   border-radius: 8px;
   margin: 0.5em auto;
   border: 1px solid #7C959E;
@@ -1770,6 +1770,11 @@ div.noOrg-container {
 #userAssessementReport table {
   word-break:break-all;
   font-size: 0.94em;
+}
+
+#patientReportErrorMessage {
+  margin-top: 0.2em;
+  margin-bottom: 0.5em;
 }
 
 #termsText {
