--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -24,7 +24,7 @@
             {% endif %}
             <br/>
             <div class="divider"></div>
-            <div class="or">or</div>
+            <div class="or">{{_("or")}}</div>
             <div class="or-divider"></div>
             <br/>
         </div>
@@ -34,7 +34,7 @@
                     <a href="{{ url_for('auth.login', provider_name='facebook') }}"
                        class="btn btn-social btn-facebook">
                         <i class="fa fa-facebook"></i>
-                       Login With Facebook
+                       {{_("Login With Facebook")}}
                     </a>
                 </div>
                 <div class="divider"></div>
@@ -42,7 +42,7 @@
                     <a href="{{ url_for('auth.login', provider_name='google') }}"
                        class="btn btn-social btn-google">
                         <i class="fa fa-google"></i>
-                        Login With Google
+                        {{_("Login With Google")}}
                     </a>
                 </div>
             </div>
