--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -104,7 +104,7 @@
 {% block document_ready %}
 
 $.ajaxSetup({
-    timeout: 2000,
+    timeout: 5000,
     retryAfter:3000
 });
 
@@ -415,7 +415,7 @@ $(document).ready(function(){
             $('#serviceErrorMsg').html('').hide();
 
             aco.__handleButton("hide");
-            aco.__setAccount();
+            setTimeout("aco.__setAccount();", 0);
                 
         };
     });
